<resources>
    <string name="app_name">DoJMA Journalists</string>
    <string name="add_event">Add an Event</string>
    <string name="add_campus_watch">Add Campus Watch</string>
    <string name="event_title">Event Title</string>
    <string name="event_added">Added to Events!</string>
    <string name="select_time">Select Time</string>
    <string name="required">required</string>
    <string name="cw_title">Title</string>
    <string name="DeleteEvent">Delete Event</string>
    <string name="send_notification">Send Notification</string>
    <string name="add_video">Add Video</string>
    <string name="update_mess">Update Mess Menu</string>
</resources>
