<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.HomeActivity">

    <Button
        android:id="@+id/btn_add_cw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/add_campus_watch"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/send_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/send_notification"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/add_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/add_video"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_update_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:onClick="toggleMessBtnVisibility"
        android:text="@string/update_mess"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_mess_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn_a_mess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateMess"
            android:text="Update A Mess" />

        <Button
            android:id="@+id/btn_c_mess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateMess"
            android:text="Update C Mess" />

        <Button
            android:id="@+id/btn_d_mess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateMess"
            android:text="Update D Mess" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/add_event"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_del_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/DeleteEvent"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>
